client/src/pages/voters/Register.css
.register {
  display: grid;
  place-items: center;
  height: 100vh;
}
.register__container {
  background: var(--color-gray-0);
  width: 35rem;
  padding: 3rem;
  border-radius: var(--radius-5);
}
.register__container h2 {
  margin-bottom: 2rem;
  color: var(--color-primary);
}
.register__container .form {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}
.password-validation {
  list-style: none;
  padding-left: 0;
  font-size: smaller;
  margin-top: 0.5rem;
}

.password-validation li {
  color: var(--color-danger);
}

.password-validation li.valid {
  color: var(--color-success);
  font-weight: bold;
}

.register__container .form div input {
  padding: 0.7rem;
  background: var(--color-gray-100);
  border-radius: var(--radius-1);
  color: var(--color-gray-900);
  width: 100%;
}
.register__container .form p > a {
  color: var(--color-primary);
  font-weight: 500;
}
@media screen and (max-width: 600px) {
  .register__container {
    width: 95%;
    padding: 3rem 1.5rem;
  }
}

